--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,22 +1,24 @@
 <nav class="navbar navbar-inverse">
   <div class="container">
     <div class="navbar-header">
-      <%= link_to 'Tutsplus-Clearance', root_path, class: 'navbar-brand' %>
+      <%= link_to 'PairBnB', root_path, class: 'navbar-brand' %>
     </div>
     <div id="navbar">
     <% if signed_in? %>
         <ul class="nav navbar-nav">
-        <li><%= link_to 'Add Page', new_page_path %></li>
+          <!-- <li><%#= link_to 'Add Page', new_page_path %></li> -->
         </ul>
     <% end %>
  
     <ul class="nav navbar-nav pull-right">
         <% if signed_in? %>
-        <li><span><%= current_user.email %></span></li>
-        <li><%= link_to 'Sign out', sign_out_path, method: :delete %></li>
+          <li><span><%= current_user.email %></span></li>
+          <li><%= link_to 'Sign out', sign_out_path, method: :delete %></li>
         <% else %>
         <li><%= link_to 'Sign in', sign_in_path %></li>
-    <% end %>
+        <!-- <li><%#= link_to "Sign in with Facebook", "/auth/facebook" %></li> -->
+        <li><%= link_to  "Back", root_path %></li>
+      <% end %>
   </ul>
     </div>
   </div>
