--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,7 +16,7 @@
           <li><%= link_to 'Sign out', sign_out_path, method: :delete %></li>
         <% else %>
         <li><%= link_to 'Sign in', sign_in_path %></li>
-        <!-- <li><%#= link_to "Sign in with Facebook", "/auth/facebook" %></li> -->
+        <li><%= link_to "Sign in with Facebook", "/auth/facebook" %></li>
         <li><%= link_to  "Back", root_path %></li>
       <% end %>
   </ul>
