--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,15 @@
-<h1>User#edit</h1>
-<p>Find me in app/views/user/edit.html.erb</p>
+<section id="clearance" class="edit-user">
+    <h2>
+        <%= t(".title") %>
+    </h2>
+
+    <%= form_for @user do |form| %>
+
+        <%= render partial: '/users/form', object: form %>
+
+        <div class="submit-field">
+            <%= form.submit %>
+        </div>
+
+    <% end %>
+</section>
