more fixes not setting up bourbon yet

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,7 +12,7 @@
  
     <ul class="nav navbar-nav pull-right">
         <% if signed_in? %>
-          <li><span><%= current_user.email %></span><%= link_to  current_user.name, user_path(current_user) %></li>
+          <li><span><%= current_user.email %></span><br /><%= link_to  current_user.name, user_path(current_user) %></li>
           <li><%= link_to 'Sign out', sign_out_path, method: :delete %></li>
         <% else %>
         <li><%= link_to 'Sign in', sign_in_path %></li>
