--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   <body>
 
     <header id="main-header">
+      <% if current_page?(root_path) %>
+        <%= render 'layouts/jumbotron' %>
+      <% end %>
       <%= render 'layouts/navigation' %>
     </header>
 
