--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,7 +5,8 @@
 
     <%= form_for @user do |form| %>
 
-        <%= render partial: '/users/form', object: form %>
+        <%= render partial: '/users/image_uploader', locals: { form: form } %>
+        <%= render partial: '/users/form', locals: { form: form } %>
 
         <div class="submit-field">
             <%= form.submit %>
