bootstrap tag input setup

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,9 @@
     </header>
 
     <main role="main">
+      <div id="new-listing">
+        <%= link_to  "Become a host", new_listing_path %>
+      </div>
       <%= yield %>
     </main>
 
