some minor fixes

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,6 +11,10 @@
     <% end %>
  
     <ul class="nav navbar-nav pull-right">
+        <%= form_tag(search_listings_path, :method => "get", id: "search-form") do %>
+          <%= text_field_tag :search, params[:search], placeholder: "Search PairBnB" %>
+          <%= submit_tag "Search" %>
+        <% end %>
         <% if signed_in? %>
           <li><span><%= current_user.email %></span><br /><%= link_to  current_user.name, user_path(current_user) %></li>
           <li><%= link_to 'Sign out', sign_out_path, method: :delete %></li>
