--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,4 +24,21 @@
     </li>
 </ul>
 
+<% @reservations.each do |booking| %>
+    <ul id="reserv-lists">
+        <li>
+            <%= Listing.find(booking.listing_id).name %>
+        </li>
+        <li>
+            <%= booking.start_date %>
+        </li>
+        <li>
+            <%= booking.end_date %>
+        </li>
+        <li>
+            <%= booking.total_price %>
+        </li>
+    </ul>
+<% end %>
+
 <%= link_to  "Edit", edit_user_path(current_user) %>
