--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,7 +16,8 @@
           <%= submit_tag "Search" %>
         <% end %>
         <% if signed_in? %>
-          <li><span><%= current_user.email %></span><br /><%= link_to  current_user.name, user_path(current_user) %></li>
+          <li><span><%= current_user.email %></span></li>
+          <li><%= link_to  current_user.name, user_path(current_user.id) %></li>
           <li><%= link_to 'Sign out', sign_out_path, method: :delete %></li>
         <% else %>
         <li><%= link_to 'Sign in', sign_in_path %></li>
