--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,9 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <% if content_for?(:head) %>
+      <%= yield(:head) %>
+    <% end %>
   </head>
 
   <body>
@@ -28,5 +31,8 @@
       <%#= render 'layouts/footer' %>
     </footer>
 
+      <% if content_for?(:js) %>
+        <%= yield(:js) %>
+      <% end %>
   </body>
 </html>
