basic search and filter

--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -11,7 +11,7 @@
     <%= form.radio_button :place_type, 'hell' %> Hell<br />
 </div>
     
-<div class="gender-field">
+<div class="property-field">
     <%= form.label :property_type %>
     <%= form.select :property_type, options_for_select(["House", "Entire Floor", "Condominium", "Villa", "Townhouse", "Castle", "Treehouse", "Igloo", "Yurt", "Cave", "Chalet", "Hut", "Tent", "Other"]) %>
 </div>
