--- a/app/views/listings/_filter.html.erb
+++ b/app/views/listings/_filter.html.erb
@@ -1,9 +1,18 @@
+<% content_for :head do %>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<% end %>
+
+<!-- JS file -->
+<% content_for :page_js do %>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <%= javascript_include_tag 'listings/filter' %>
+<% end %>
+
 <!-- filter option: place_type, property_type, price, bed number, room number, amenities, kitchen -->
 <nav class="navbar navbar-inverse">
   <div class="container">
     <%= form_for @listing_search, url: search_listings_path, method: :get do |form| %>
         <%= hidden_field_tag :user_search, @search_param %>
-        <input type="hidden" name="country" value="Norway">
         <div class="radio-field">
             <%= form.label :place_type %><br />
             <%= form.radio_button :place_type, 'all', :checked => true %> All<br />
@@ -40,18 +49,14 @@
         </div>
 
         <div>
-            <%= form.label :price, "Price" %>
-            <%= form.range_field :price, "list" => "price-list", in: 80...500 %>
-            <datalist id="price-list">
-                <% i = 80 %>
-                <% until i > 500 do %>
-                    <option value="<%= i %><% if i % 100 == 0 %>" label="<%= i %>"<% end %>"></option>
-                    <% i = i + 10 %>
-                <% end %>
-            </datalist>
+            <%= label_tag :amount, "Price Range" %>
+            <%= text_field_tag (:amount) %>
+            <%= hidden_field_tag 'listing[min_price]', '0' %>
+            <%= hidden_field_tag 'listing[max_price]', '0' %>                
+            <div id="slider-range"></div>
         </div>
 
-        <%= form.submit "Filter" %>
+        <%= form.submit "Filter", id: "btn-filter" %>
     <% end %>
   </div>
 </nav>
