basic ajax search bar setup

--- a/app/assets/javascripts/listings/filter.js.erb
+++ b/app/assets/javascripts/listings/filter.js.erb
@@ -1,5 +1,7 @@
-$(function () {
-    // alert("connected")
+// jshint esversion: 6
+
+$(document).ready(() => {
+    alert("range slider connected");
     $("#slider-range").slider({
         range: true,
         min: 80,
