--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,8 +12,7 @@
  
     <ul class="nav navbar-nav pull-right">
         <%= form_tag(search_listings_path, :method => "get", id: "search-form") do %>
-        <%#= form_tag(search_path, :method => "POST", id: "search-form") do %>
-          <%= text_field_tag :search, "dog", placeholder: "Search PairBnB", list: "list" %>
+          <%= text_field_tag :search, params[:search], placeholder: "Search PairBnB", list: "list" %>
           <datalist id="list"></datalist>
           <%= submit_tag "Search" %>
         <% end %>
