--- a/app/views/listings/_filter.html.erb
+++ b/app/views/listings/_filter.html.erb
@@ -3,8 +3,9 @@
 <% end %>
 
 <!-- JS file -->
-<% content_for :page_js do %>
+<% content_for :js do %>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <!-- <script src="app/assets/javascripts/listings/filter"></script> -->
     <%= javascript_include_tag 'listings/filter' %>
 <% end %>
 
