--- a/app/views/reservations/confirm.html.erb
+++ b/app/views/reservations/confirm.html.erb
@@ -58,6 +58,7 @@
     <script src="https://js.braintreegateway.com/web/3.6.3/js/hosted-fields.min.js"></script>
     
     <script>
+        alert("test");
         var form = document.querySelector('#cardForm');
         var submit = document.querySelector("#submit-payment-btn");
         var authorization = '<%= @client_token %>';
